<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCustomer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerFragment">

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarCliente"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarCliente"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuscarCliente"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTelefone"
        app:layout_constraintTop_toBottomOf="@+id/tvCliente" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etEndereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarCliente" />

    <EditText
        android:id="@+id/etEndereco"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="93dp"
        android:ems="10"
        android:hint="@string/endereco"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnListarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <Button
        android:id="@+id/btnInserirCliente"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:text="@string/inserir"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />

    <Button
        android:id="@+id/btnModificarCliente"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirCliente"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />

    <Button
        android:id="@+id/btnListarCliente"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarCliente"
        app:layout_constraintEnd_toStartOf="@+id/btnExcluirCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />

    <Button
        android:id="@+id/btnExcluirCliente"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="@+id/btnListarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnListarCliente"
        app:layout_constraintTop_toTopOf="@+id/btnListarCliente" />

    <TextView
        android:id="@+id/tvListarCliente"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarCliente" />

    <TextView
        android:id="@+id/tvCliente"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cliente"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>