<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentService"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceFragment">

    <EditText
        android:id="@+id/etCodigoServico"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDescricao"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarServico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServico" />

    <Button
        android:id="@+id/btnBuscarServico"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="14dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etDescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoServico"
        app:layout_constraintTop_toBottomOf="@+id/tvServico" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarServico" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="93dp"
        android:ems="10"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnListarServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescricao" />

    <Button
        android:id="@+id/btnInserirServico"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:text="@string/inserir"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarServico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnModificarServico"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirServico"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnListarServico"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarServico"
        app:layout_constraintEnd_toStartOf="@+id/btnExcluirServico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnExcluirServico"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="@+id/btnListarServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnListarServico"
        app:layout_constraintTop_toTopOf="@+id/btnListarServico" />

    <TextView
        android:id="@+id/tvListarServico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarServico" />

    <TextView
        android:id="@+id/tvServico"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/servico"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
